konga/01-ns-konga.yaml
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "konga"
  labels:
    name: "konga"
