konga/04-dpl-konga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: konga
    track: konga-stable
  name: konga-stable
  namespace: konga
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: konga
      track: konga-stable
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: konga
        track: konga-stable
    spec:
      containers:
      - name: konga
        image: pantsel/konga
        ports:
        - name: http
          containerPort: 1337
          protocol: TCP
      - name: postgres
        image: postgres:9.6
        ports: 
          - containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: konga-pgdata
      volumes:
        - name: konga-pgdata
          persistentVolumeClaim:
            claimName: konga-pv-claim
